--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <button type="button" data-bs-target="#carousel" data-bs-slide-to="15" aria-label="Slide 16"></button>
     <button type="button" data-bs-target="#carousel" data-bs-slide-to="16" aria-label="Slide 17"></button>
     <button type="button" data-bs-target="#carousel" data-bs-slide-to="17" aria-label="Slide 18"></button>
-    <button type="button" data-bs-target="#carousel" data-bs-slide-to="17" aria-label="Slide 19"></button>
-    <button type="button" data-bs-target="#carousel" data-bs-slide-to="17" aria-label="Slide 20"></button>
-    <button type="button" data-bs-target="#carousel" data-bs-slide-to="17" aria-label="Slide 21"></button>
-    <button type="button" data-bs-target="#carousel" data-bs-slide-to="17" aria-label="Slide 22"></button>
+    <button type="button" data-bs-target="#carousel" data-bs-slide-to="18" aria-label="Slide 19"></button>
+    <button type="button" data-bs-target="#carousel" data-bs-slide-to="19" aria-label="Slide 20"></button>
+    <button type="button" data-bs-target="#carousel" data-bs-slide-to="20" aria-label="Slide 21"></button>
+    <button type="button" data-bs-target="#carousel" data-bs-slide-to="21" aria-label="Slide 22"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="2500">
@@ -123,11 +123,11 @@
         <div class="carousel-caption d-none d-md-block"><h5>Paddling at Grayon Beach</h5></div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
