--- a/index.html
+++ b/index.html
@@ -136,10 +136,19 @@
     <div class="container my-5">
       <h1>Nothing But Fun</h1>
       <div class="col-lg-8 px-0">
-        <p class="fs-5">We’re a group of fun loving peeps who just want to be out and social, living life to the fullest in the Greater Pensacola area.</p>
-        <p class="fs-5">We would for you to <a href="/join">join us</a>!</p>
+        <p class="fs-5">We’re a group of fun loving peeps who just want to be out and social, living life to the fullest in the Greater Pensacola area.</p>        
+        <a href="/join" class="btn btn-primary btn-lg" role="button" aria-disabled="true">Join us!</a>
+        <p>&nbsp;</p>
+        <p class="fs-5">Want to find out more about us first? Start <a href="/faq/who">here</a>.</p>        
+      </div>
+      <div class="col-lg-8 px-0">
+        <p>&nbsp;</p>
+        <p class="fs-6">
+        Other links: <a href="/faq">FAQ</a> • <a href="/risk">Liability Waiver</a>
+        </p>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
